k8s/nodepool.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zuul
  name: nodepool-launcher
  labels:    
    app.kubernetes.io/name: nodepool
    app.kubernetes.io/instance: nodepool
    app.kubernetes.io/part-of: nodepool
    app.kubernetes.io/component: nodepool-launcher
spec:
  replicas: 1
  selector:
    matchLabels:      
      app.kubernetes.io/name: nodepool
      app.kubernetes.io/instance: nodepool
      app.kubernetes.io/part-of: nodepool
      app.kubernetes.io/component: nodepool-launcher
  template:
    metadata:
      labels:        
        app.kubernetes.io/name: nodepool
        app.kubernetes.io/instance: nodepool
        app.kubernetes.io/part-of: nodepool
        app.kubernetes.io/component: nodepool-launcher
      annotations:
        checksum/config: 0b99629a19620e15d12ee9480777ffea052b15ddd6a8348e78ea6987154026f7
    spec:
      containers:
      - name: launcher
        image: zuul/nodepool-launcher:latest
        volumeMounts:
        - name: nodepool-config
          mountPath: /etc/nodepool
      volumes:
      - name: nodepool-config
        secret:
          secretName: nodepool
      serviceAccountName: nodepool
